--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -103,7 +103,7 @@ input, select, textarea {
 		}
 
 		.juan-pic {
-			width: 350px;
+			width: 70%;
 			height: 100%;
 		}
 
@@ -1072,10 +1072,20 @@ input, select, textarea {
 							padding-top: 3rem;
 						}
 
+						.juan-pic {
+							width: 50%;
+							height: 100%;
+						}
+
 		}
 
 		@media screen and (max-width: 980px) {
 
+
+			.juan-pic {
+				width: 40%;
+				height: 100%;
+			}
 			.row {
 				display: flex;
 				flex-wrap: wrap;
