--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -107,10 +107,6 @@ input, select, textarea {
 			height: 100%;
 		}
 
-		.image img {
-			border-radius: 20%;
-		}
-
 	}
 
 	html {
@@ -2619,7 +2615,7 @@ input, select, textarea {
 
 		.image img {
 			display: block;
-			border-radius: 4	0px;
+			border-radius: 20px;
 		}
 
 		.image.left, .image.right {
@@ -2654,7 +2650,6 @@ input, select, textarea {
 
 			.image.fit img {
 				width: 100%;
-				height: 25rem;
 			}
 
 		.image.main {
